added tooltips to work-in-progress areas

--- a/src/Main/Main.module.scss
+++ b/src/Main/Main.module.scss
@@ -3,7 +3,7 @@
 .MainWrapper {
     width: 100vw;
     position: relative;
-    background-color: $bcg-primary-l;
+    background-color: rgb(247, 245, 245);
     transition: background-color 0.3s linear;
 
     .DarkModeButtonWrapper,
