--- a/src/variables.scss
+++ b/src/variables.scss
@@ -14,6 +14,7 @@ $bcg-primary-d: #1e2023;
 $blue-d: #35a9f1;
 
 // ---------------------------------------- FONTS
+$os: "Open Sans";
 $gt: "GT Walsheim Pro";
 $av: "Avenir-Roman";
 $sa: "Sailec-Medium";
