--- a/src/Main/JournalEntries/JournalEntry/Tasks/Task.module.scss
+++ b/src/Main/JournalEntries/JournalEntry/Tasks/Task.module.scss
@@ -1,15 +1,42 @@
-.ImageContainer {
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
-    background-color: white;
-    overflow: hidden;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.ImageAndBorderContainer {
+    position: relative;
 
-    img {
-        object-fit: fill;
-        height: 110%;
+    span {
+        top: -3.5px;
+        left: -3.5px;
+        position: absolute;
+        width: 57px;
+        height: 57px;
+        border-radius: 50%;
+        border: 2px solid rgba(0, 0, 255, 0);
+        border: 1px solid rgba(0, 0, 255, 0);
+        cursor: pointer;
+
+        &:hover {
+            border-color: rgb(170, 173, 174);
+            border-color: white;
+            border-color: #cacfd6;
+            transition: border-color 0.2s ease-in;
+        }
+    }
+
+    .ImageContainer {
+        width: 50px;
+        height: 50px;
+        border-radius: 50%;
+        background-color: rgba(255, 255, 255, 0.571);
+        overflow: hidden;
+        border-radius: 50%;
+
+        p {
+            text-align: center;
+            margin-top: 10px;
+            font-size: 9px;
+        }
+
+        img {
+            object-fit: cover;
+            height: 110%;
+        }
     }
 }
