--- a/src/Main/JournalEntries/JournalEntry/Tasks/Task.module.scss
+++ b/src/Main/JournalEntries/JournalEntry/Tasks/Task.module.scss
@@ -10,9 +10,10 @@
         border-radius: 50%;
         border: 2px solid rgba(0, 0, 255, 0);
         border: 1px solid rgba(0, 0, 255, 0);
-        cursor: pointer;
-
+    }
+    .HoverImage {
         &:hover {
+            cursor: pointer;
             border-color: rgb(170, 173, 174);
             border-color: white;
             border-color: #cacfd6;
