--- a/src/variables.scss
+++ b/src/variables.scss
@@ -16,12 +16,9 @@ $blue-d: #35a9f1;
 // ---------------------------------------- FONTS
 $os: "Open Sans";
 $gt: "GT Walsheim Pro";
-$av: "Avenir-Roman";
-$sa: "Sailec-Medium";
-$sa-l: "Sailec-Light";
 $dm: "DM Sans";
-$lo: "Lora";
 $po: "Poppins";
+$ns: "Nunito Sans, sans-serif";
 
 // ---------------------------------------- FONT-COLORS
 $fc-primary-l: #6c767c;
