refactor: create custom close button to use in other components

--- a/src/Main/JournalEntries/JournalEntry/Tasks/ImageModal.module.scss
+++ b/src/Main/JournalEntries/JournalEntry/Tasks/ImageModal.module.scss
@@ -1,17 +1,51 @@
-.ImageModalWrapper {
-    position: absolute;
-    top: 5%;
-    left: 10%;
-    width: 80%;
-    height: 80%;
-    background-color: white;
-    z-index: 100;
-    border-radius: 5px;
-    padding: 30px;
+.WithBackdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.4);
 
-    .TaskImageContainer {
-        img {
-            border-radius: 4px;
+    .ImageModalWrapper {
+        position: relative;
+        // top: 5%;
+        // left: 10%;
+        width: 80%;
+        height: 80%;
+        background-color: white;
+        z-index: 100;
+        border-radius: 5px;
+        padding: 30px;
+        box-shadow: 0 2.8px 2.2px rgba(0, 0, 0, 0.034),
+            0 6.7px 5.3px rgba(0, 0, 0, 0.048), 0 12.5px 10px rgba(0, 0, 0, 0.06),
+            0 22.3px 17.9px rgba(0, 0, 0, 0.072), 0 41.8px 33.4px rgba(0, 0, 0, 0.086),
+            0 100px 80px rgba(0, 0, 0, 0.12);
+
+        .CloseButton {
+            position: absolute;
+            top: 22px;
+            right: -10px;
+            font-size: 20px;
+
+            svg {
+                color: rgb(107, 110, 111);
+            }
+
+            &:hover {
+                svg {
+                    cursor: pointer;
+                    color: #1869ff;
+                }
+            }
+        }
+
+        .TaskImageContainer {
+            img {
+                border-radius: 4px;
+            }
         }
     }
 }
