FEAT: finish image modal: 1. add title and date to the image 2. prop drilling to pass state to modal 3. refactor formatDate helper function 4. tweak css for Task

--- a/src/Main/Projects/Projects.module.scss
+++ b/src/Main/Projects/Projects.module.scss
@@ -320,6 +320,7 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;
+            text-align: center;
 
             svg {
                 margin-top: 30px;
