--- a/src/Main/JournalEntries/JournalEntry/Tasks/Task.module.scss
+++ b/src/Main/JournalEntries/JournalEntry/Tasks/Task.module.scss
@@ -1,9 +1,7 @@
 .HoverImage {
     &:hover {
         cursor: pointer;
-        border-color: rgb(170, 173, 174);
-        border-color: white;
-        border-color: #cacfd6;
+        border-color: #35a9f163;
         transition: border-color 0.2s ease-in;
     }
 }
@@ -14,8 +12,7 @@
     width: 57px;
     height: 57px;
     border-radius: 50%;
-    border: 2px solid rgba(0, 0, 255, 0);
-    border: 1px solid rgba(0, 0, 255, 0);
+    border: 3px solid rgba(0, 0, 255, 0);
 
     .ImageContainer {
         width: 50px;
@@ -24,6 +21,7 @@
         background-color: rgba(255, 255, 255, 0.571);
         overflow: hidden;
         border-radius: 50%;
+        border: 0.5px solid white;
 
         p {
             text-align: center;
